# http-sink-mock-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml  sample_connector_config.json
app/: __init__.py  main.py  producer.py  server.py
scripts/: __init__.py  produce_test_messages.py  run_demo.py
tests/: __init__.py  test_server.py
